--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
@@ -1,7 +1,16 @@
 ﻿@inject PorfolioDbContext dbContext;
+@inject Microsoft.AspNetCore.Identity.UserManager<User> userManager;
 
 @{
-    List<MessengeUser> messenge = dbContext.MessengeUsers.Where(dr => dr.User.UserName == User.Identity.Name).ToList();
+    User user = null;
+    if (User.Identity.IsAuthenticated)
+    {
+        user = userManager.Users.FirstOrDefault(x => x.UserName == User.Identity.Name);
+    }
+}
+
+@{
+    List<MessengeUser> messenge = dbContext.MessengeUsers.Where(dr => dr.User.UserName == User.Identity.Name && dr.IsRead ==false).ToList();
 }
 
 <!doctype html>
@@ -13,24 +22,8 @@
     <title>@ViewData["Title"]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="assets/images/icon/favicon.ico">
-    <link rel="stylesheet" href="~/Admin/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/themify-icons.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/metisMenu.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/slicknav.min.css">
-    <!-- amchart css -->
-    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
-    <!-- others css -->
-    <link rel="stylesheet" href="~/Admin/assets/css/typography.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/default-css.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/styles.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/responsive.css">
-    <!-- modernizr css -->
-    <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
-
     @RenderSection("header_link", false)
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -61,64 +54,56 @@
                                     <li><a href="/UserAdmin">Dashboard</a></li>
                                 </ul>
                             </li>
+                            <li><a href="/UserAdmin/Messange/List"><i class="bi bi-inbox-fill"></i> <span>Messange Box</span></a></li>
                             <li>
                                 <a href="javascript:void(0)" aria-expanded="true"><i class="ti-user"></i><span>User</span></a>
                                 <ul class="collapse">
                                     <li><a href="/UserAdmin/UserAccount/Account">Account</a></li>
-                                    <li><a href="/UserAdmin/Account/List">Parol Change</a></li>
+                                    <li><a href="/UserAdmin/Account/List">Settings</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="javascript:void(0)" aria-expanded="true">
-                                    <i class="ti-email"></i>
-                                    <span>Messange Box</span>
-                                </a>
+                                <a href="javascript:void(0)" aria-expanded="true"><i class="bi bi-wrench-adjustable-circle"></i> <span>Services</span></a>
                                 <ul class="collapse">
-                                    <li><a href="/Admin/Role/List">Role List</a></li>
-                                    <li><a href="/Admin/Role/Create">Role Create</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="maps.html"><i class="ti-map-alt"></i> <span>maps</span></a></li>
-                            <li><a href="invoice.html"><i class="ti-receipt"></i> <span>Invoice Summary</span></a></li>
-                            <li>
-                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-layers-alt"></i> <span>Pages</span></a>
-                                <ul class="collapse">
-                                    <li><a href="login.html">Login</a></li>
-                                    <li><a href="login2.html">Login 2</a></li>
-                                    <li><a href="login3.html">Login 3</a></li>
-                                    <li><a href="register.html">Register</a></li>
-                                    <li><a href="register2.html">Register 2</a></li>
-                                    <li><a href="register3.html">Register 3</a></li>
-                                    <li><a href="register4.html">Register 4</a></li>
-                                    <li><a href="screenlock.html">Lock Screen</a></li>
-                                    <li><a href="screenlock2.html">Lock Screen 2</a></li>
-                                    <li><a href="reset-pass.html">reset password</a></li>
-                                    <li><a href="pricing.html">Pricing</a></li>
+                                    <li><a href="login.html">List</a></li>
+                                    <li><a href="login2.html">Create</a></li>
                                 </ul>
                             </li>
 
                             <li>
-                                <a href="javascript:void(0)" aria-expanded="true">
-                                    <i class="fa fa-align-left"></i>
-                                    <span>
-                                        Multi
-                                        level menu
-                                    </span>
-                                </a>
+                                <a href="javascript:void(0)" aria-expanded="true"><i class="bi bi-award"></i> <span>Achievements</span></a>
                                 <ul class="collapse">
-                                    <li><a href="/Admin/Role/List">Role List</a></li>
-                                    <li><a href="#">Item level (1)</a></li>
-                                    <li>
-                                        <a href="#" aria-expanded="true">Item level (1)</a>
-                                        <ul class="collapse">
-                                            <li><a href="#">Item level (2)</a></li>
-                                            <li><a href="#">Item level (2)</a></li>
-                                            <li><a href="#">Item level (2)</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Item level (1)</a></li>
+                                    <li><a href="login.html">List</a></li>
+                                    <li><a href="login2.html">Create</a></li>
                                 </ul>
                             </li>
+                            <li>
+                                <a href="javascript:void(0)" aria-expanded="true"><i class="ti-briefcase"></i> <span>Portfolio</span></a>
+                                <ul class="collapse">
+                                    <li><a href="login.html">List</a></li>
+                                    <li><a href="login2.html">Create</a></li>
+                                </ul>
+                            </li>
+
+                            <li>
+                                <a href="javascript:void(0)" aria-expanded="true"><i class="bi bi-people"></i> <span>Referans</span></a>
+                                <ul class="collapse">
+                                    <li><a href="login.html">List</a></li>
+                                    <li><a href="login2.html">Create</a></li>
+                                </ul>
+                            </li>
+
+                            <li>
+                                <a href="javascript:void(0)" aria-expanded="true"><i class="bi bi-chat-left-text"></i> <span>Blog</span></a>
+                                <ul class="collapse">
+                                    <li><a href="login.html">List</a></li>
+                                    <li><a href="login2.html">Create</a></li>
+                                </ul>
+                            </li>
+
+
+
+
                         </ul>
                     </nav>
                 </div>
@@ -209,12 +194,12 @@
                                 </div>
                             </li>
                             <li class="dropdown">
-                                <i class="fa fa-envelope-o dropdown-toggle" data-toggle="dropdown"><span>@messenge.Where(dr => dr.IsRead == false).ToList().Count</span></i>
+                                <i class="fa fa-envelope-o dropdown-toggle" data-toggle="dropdown"><span>@messenge.Count</span></i>
                                 <div class="dropdown-menu notify-box nt-enveloper-box">
                                     <span class="notify-title">
-                                        @if (messenge.Where(dr => dr.IsRead == false).ToList().Count != 0)
+                                        @if (messenge.Count != 0)
                                         {
-                                            <span> You have @messenge.Where(dr => dr.IsRead == false).ToList().Count  new notifications</span>
+                                            <span> You have @messenge.Count  new notifications</span>
                                         }
 
                                         <a href="/UserAdmin/Messange/List">view all</a>
@@ -259,12 +244,12 @@
                     </div>
                     <div class="col-sm-6 clearfix">
                         <div class="user-profile pull-right">
-                            <img class="avatar user-thumb" src="~/Admin/assets/images/author/avatar.png" alt="avatar">
-                            <h4 class="user-name dropdown-toggle" data-toggle="dropdown">Kumkum Rai <i class="fa fa-angle-down"></i></h4>
+                            <img class="avatar user-thumb" src="~/img/Profile/@user.Image" alt="avatar">
+                            <h4 class="user-name dropdown-toggle" data-toggle="dropdown">@user.UserName <i class="fa fa-angle-down"></i></h4>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="/UserAdmin/Messange/List">Message</a>
                                 <a class="dropdown-item" href="#">Settings</a>
-                                <a class="dropdown-item" href="#">Log Out</a>
+                                <a class="dropdown-item" href="/Signin/LogOut" ">Log Out</a>
                             </div>
                         </div>
                     </div>
@@ -472,19 +457,6 @@
         </div>
     </div>
     <!-- offset area end -->
-    <!-- jquery latest version -->
-    <script src="~/Admin/assets/js/vendor/jquery-2.2.4.min.js"></script>
-    <!-- bootstrap 4 js -->
-    <script src="~/Admin/assets/js/popper.min.js"></script>
-    <script src="~/Admin/assets/js/bootstrap.min.js"></script>
-    <script src="~/Admin/assets/js/owl.carousel.min.js"></script>
-    <script src="~/Admin/assets/js/metisMenu.min.js"></script>
-    <script src="~/Admin/assets/js/jquery.slimscroll.min.js"></script>
-    <script src="~/Admin/assets/js/jquery.slicknav.min.js"></script>
-
-    <!-- others plugins -->
-    <script src="~/Admin/assets/js/plugins.js"></script>
-    <script src="~/Admin/assets/js/scripts.js"></script>
 
     @RenderSection("footer_link", false)
 
