--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/About/Update.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/About/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@model MessengeUser
+﻿@model About
 @{
 }
 
@@ -21,56 +21,35 @@
     <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
 }
 
-
-
 <div class="main-content-inner">
     <div class="row">
-        <div class="col-lg-12 mt-5">
+        <div class="col-12 mt-5">
             <div class="card">
-                <div class="card-body">
-                    <div class="invoice-area">
-                        <div class="invoice-head">
-                            <div class="row">
-                                <div class="iv-left col-6">
-                                    <span>Messange</span>
-                                </div>
-                                <div class="iv-right col-6 text-md-right">
-                                    <span></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row align-items-center">
-                            <div class="col-md-6">
-                                <div class="invoice-address">
-                                    <h3>Name : @Model.FullName</h3>
-                                    <h5>Email : @Model.Email</h5>
-                                    <p>Subject : @Model.Subject</p>
-
-                                </div>
-                            </div>
-                            <div class="col-md-6 text-md-right">
-                                <ul class="invoice-date">
-                                    <li>Send Time : @Model.Date.ToString("G")</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="invoice-table table-responsive mt-5">
-                            <p>
-                                @Model.Description
-                            </p>
-                        </div>
+                <form class="card-body" method="post">
+                    <h4 class="header-title">
+                        About Update
+                    </h4>
+                    <div class="form-group">
+                        <label asp-for="MainSkill" class="col-form-label">Main Skill</label>
+                        <input class="form-control" type="text" asp-for="MainSkill">
+                        <span asp-validation-for="Descriptoion" class="text-danger my-1"></span>
                     </div>
-
-                </div>
+                    <div class="form-group col-12">
+                        <label asp-for="Descriptoion">Description</label>
+                        <textarea class="form-control" asp-for="Descriptoion" id="Descriptoion" rows="3"></textarea>
+                        <span asp-validation-for="Descriptoion" class="text-danger my-1"></span>
+                    </div>
+                    <div class="form-group col-12">
+                        <button type="submit" class="btn btn-primary mt-4 pr-4 pl-4">Submit</button>
+                    </div>
+                </form>
             </div>
         </div>
+        <!-- Textual inputs end -->
     </div>
 </div>
 
-
-
 @section footer_link{
-
     <!-- jquery latest version -->
     <script src="~/Admin/assets/js/vendor/jquery-2.2.4.min.js"></script>
     <!-- bootstrap 4 js -->
@@ -80,9 +59,20 @@
     <script src="~/Admin/assets/js/metisMenu.min.js"></script>
     <script src="~/Admin/assets/js/jquery.slimscroll.min.js"></script>
     <script src="~/Admin/assets/js/jquery.slicknav.min.js"></script>
+    <script src="https://cdn.ckeditor.com/ckeditor5/22.0.0/classic/ckeditor.js"></script>
+    <script>
+        ClassicEditor
+            .create(document.querySelector('#Descriptoion'))
+            .catch(error => {
+                console.error(error);
+            });
+    </script>
 
+
+
+
+    <partial name="_ValidationScriptsPartial" />
     <!-- others plugins -->
     <script src="~/Admin/assets/js/plugins.js"></script>
     <script src="~/Admin/assets/js/scripts.js"></script>
-
 }
