--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/CodeSkill/Create.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/CodeSkill/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MessengeUser
+﻿@model SkillCode
 @{
 }
 
@@ -21,56 +21,48 @@
     <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
 }
 
-
-
 <div class="main-content-inner">
     <div class="row">
-        <div class="col-lg-12 mt-5">
+        <div class="col-12 mt-5">
+            <div asp-validation-summary="All"></div>
             <div class="card">
-                <div class="card-body">
-                    <div class="invoice-area">
-                        <div class="invoice-head">
-                            <div class="row">
-                                <div class="iv-left col-6">
-                                    <span>Messange</span>
-                                </div>
-                                <div class="iv-right col-6 text-md-right">
-                                    <span></span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row align-items-center">
-                            <div class="col-md-6">
-                                <div class="invoice-address">
-                                    <h3>Name : @Model.FullName</h3>
-                                    <h5>Email : @Model.Email</h5>
-                                    <p>Subject : @Model.Subject</p>
+                <form class="card-body" method="post">
 
-                                </div>
-                            </div>
-                            <div class="col-md-6 text-md-right">
-                                <ul class="invoice-date">
-                                    <li>Send Time : @Model.Date.ToString("G")</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="invoice-table table-responsive mt-5">
-                            <p>
-                                @Model.Description
-                            </p>
-                        </div>
+                    <h4 class="header-title">
+                        Skill Code 
+
+                        @if (ViewBag.IsCreate)
+                        {
+                            <span>Create</span>
+                        }
+                        else
+                        {
+                            <span>Update</span>
+                        }
+
+                    </h4>
+                    <input type="hidden" asp-for="AboutId" value="@Model.AboutId"/>
+                    <div class="form-group">
+                        <label asp-for="Name" class="col-form-label">Skill</label>
+                        <input class="form-control" type="text" asp-for="Name">
+                        <span asp-validation-for="Name" class="text-danger my-1"></span>
                     </div>
-
-                </div>
+                    <div class="form-group">
+                        <label asp-for="Percent">Percent</label>
+                        <input class="form-control" type="number" asp-for="Percent">
+                        <span asp-validation-for="Percent" class="text-danger my-1"></span>
+                    </div>
+                    <div class="form-group col-12">
+                        <button type="submit" class="btn btn-primary mt-4 pr-4 pl-4">Submit</button>
+                    </div>
+                </form>
             </div>
         </div>
+        <!-- Textual inputs end -->
     </div>
 </div>
 
-
-
 @section footer_link{
-
     <!-- jquery latest version -->
     <script src="~/Admin/assets/js/vendor/jquery-2.2.4.min.js"></script>
     <!-- bootstrap 4 js -->
@@ -80,9 +72,10 @@
     <script src="~/Admin/assets/js/metisMenu.min.js"></script>
     <script src="~/Admin/assets/js/jquery.slimscroll.min.js"></script>
     <script src="~/Admin/assets/js/jquery.slicknav.min.js"></script>
+    <script src="https://cdn.ckeditor.com/ckeditor5/22.0.0/classic/ckeditor.js"></script>
 
+    <partial name="_ValidationScriptsPartial" />
     <!-- others plugins -->
     <script src="~/Admin/assets/js/plugins.js"></script>
     <script src="~/Admin/assets/js/scripts.js"></script>
-
 }
