--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Dashboard/Index.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Dashboard/Index.cshtml
@@ -1,11 +1,25 @@
 ﻿
 @{
-    
+
 
 }
 
 @section header_link {
-    <link rel="stylesheet" href="assets/css/slicknav.min.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/themify-icons.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/metisMenu.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/slicknav.min.css">
+    <!-- amchart css -->
+    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
+    <!-- others css -->
+    <link rel="stylesheet" href="~/Admin/assets/css/typography.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/default-css.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/styles.css">
+    <link rel="stylesheet" href="~/Admin/assets/css/responsive.css">
+    <!-- modernizr css -->
+    <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
 }
 
 <div class="main-content-inner">
@@ -223,6 +237,15 @@
 
 @section footer_link{
 
+    <!-- jquery latest version -->
+    <script src="~/Admin/assets/js/vendor/jquery-2.2.4.min.js"></script>
+    <!-- bootstrap 4 js -->
+    <script src="~/Admin/assets/js/popper.min.js"></script>
+    <script src="~/Admin/assets/js/bootstrap.min.js"></script>
+    <script src="~/Admin/assets/js/owl.carousel.min.js"></script>
+    <script src="~/Admin/assets/js/metisMenu.min.js"></script>
+    <script src="~/Admin/assets/js/jquery.slimscroll.min.js"></script>
+    <script src="~/Admin/assets/js/jquery.slicknav.min.js"></script>
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
@@ -243,5 +266,8 @@
     <!-- all map chart -->
     <script src="~/Admin/assets/js/maps.js"></script>
 
+    <!-- others plugins -->
+    <script src="~/Admin/assets/js/plugins.js"></script>
+    <script src="~/Admin/assets/js/scripts.js"></script>
 
 }
