main: User Change Password Complate
UserAdmin SettingsController > ChangePassword View Complate

--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
@@ -59,7 +59,7 @@
                                 <a href="javascript:void(0)" aria-expanded="true"><i class="ti-user"></i><span>User</span></a>
                                 <ul class="collapse">
                                     <li><a href="/UserAdmin/UserAccount/Account">Account</a></li>
-                                    <li><a href="/UserAdmin/Account/List">Settings</a></li>
+                                    <li><a href="/UserAdmin/Settings/Index">Settings</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -248,7 +248,7 @@
                             <h4 class="user-name dropdown-toggle" data-toggle="dropdown">@user.UserName <i class="fa fa-angle-down"></i></h4>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="/UserAdmin/Messange/List">Message</a>
-                                <a class="dropdown-item" href="#">Settings</a>
+                                <a class="dropdown-item" href="/UserAdmin/Settings/Index">Settings</a>
                                 <a class="dropdown-item" href="/Signin/LogOut" ">Log Out</a>
                             </div>
                         </div>
