main: User Setting Complate
SettingsConttroller => Index Chaneg User Account Information

--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Settings/Index.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Settings/Index.cshtml
@@ -25,14 +25,25 @@
 <div class="main-content-inner">
     <div class="row">
         <div class="col-12 mt-5">
+            @if (TempData["SettingAlert"] != null)
+            {
+                <div class="col-12 mt-2 alert-dismiss">
+                    <div class="alert alert-primary alert-dismissible fade show" role="alert">
+                        @TempData["SettingAlert"].ToString()
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span class="fa fa-times"></span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="card">
                 <form class="card-body row" method="post" enctype="multipart/form-data">
                     <h4 class="header-title d-flex justify-content-between col-12">
-                        <span>User Setting</span> 
+                        <span>User Setting</span>
                         <a class="btn btn-primary" href="/UserAdmin/Settings/ChangePassword"><span class="ti-key"></span> Change Password</a>
 
                     </h4>
-                    <div class="col-lg-3 my-2 col-sm-12">
+                    <div class="col-lg-4 my-2 col-sm-12">
                         <label class="col-form-label d-block">Current Image</label>
                         <img class="img-fluid" src="~/img/Profile/@Model.Image" />
                         <div class="custom-file">
@@ -40,21 +51,35 @@
                             <input type="file" accept="image/jpeg,image/jpg,image/png,image/gif,image/jfif" asp-for="Photo">
                         </div>
                     </div>
-                    <div class="col-lg-9 my-2 form-group  col-sm-12">
-                        <label asp-for="UserName" class="col-form-label">User Name</label>
-                        <input class="form-control" type="text" asp-for="UserName">
-                        <span asp-validation-for="UserName" class="text-danger my-1"></span>
-                    </div>
-                    <input type="hidden" asp-for="Id" value="@Model.Id" />
-                    <div class="form-group pt-3 col-lg-6 col-sm-12">
-                        <label asp-for="FirstName" class="col-form-label">First Name</label>
-                        <input class="form-control" type="text" asp-for="FirstName">
-                        <span asp-validation-for="FirstName" class="text-danger my-1"></span>
-                    </div>
-                    <div class="form-group pt-3 col-lg-6 col-sm-12">
-                        <label asp-for="LastName" class="col-form-label">Last Name</label>
-                        <input class="form-control" type="text" asp-for="LastName">
-                        <span asp-validation-for="LastName" class="text-danger my-1"></span>
+                    <div class="col-lg-8 col-sm-12">
+                        <div class="col-12 mt-2 alert-dismiss">
+                            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                                <span>If You Change User Name Or Email, You Exit This Account. Plase Again Sing in </span>
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span class="fa fa-times"></span>
+                                </button>
+                            </div>
+                        </div>
+                        <div class=" my-2 form-group">
+                            <label asp-for="UserName" class="col-form-label">User Name</label>
+                            <input class="form-control" type="text" asp-for="UserName">
+                            <span asp-validation-for="UserName" class="text-danger my-1"></span>
+                        </div>
+                        <div class=" my-2 form-group">
+                            <label asp-for="Email" class="col-form-label">Email</label>
+                            <input class="form-control" type="text" asp-for="Email">
+                            <span asp-validation-for="Email" class="text-danger my-1"></span>
+                        </div>
+                        <div class="form-group pt-3">
+                            <label asp-for="FirstName" class="col-form-label">First Name</label>
+                            <input class="form-control" type="text" asp-for="FirstName">
+                            <span asp-validation-for="FirstName" class="text-danger my-1"></span>
+                        </div>
+                        <div class="form-group pt-3">
+                            <label asp-for="LastName" class="col-form-label">Last Name</label>
+                            <input class="form-control" type="text" asp-for="LastName">
+                            <span asp-validation-for="LastName" class="text-danger my-1"></span>
+                        </div>
                     </div>
                     <div class="form-group col-12 mb-4">
                         <span asp-validation-for="Gender" class="d-block text-danger"></span>
