--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
@@ -23,6 +23,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="assets/images/icon/favicon.ico">
     @RenderSection("header_link", false)
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 
@@ -65,8 +66,8 @@
                             <li>
                                 <a href="javascript:void(0)" aria-expanded="true"><i class="bi bi-wrench-adjustable-circle"></i> <span>Services</span></a>
                                 <ul class="collapse">
-                                    <li><a href="login.html">List</a></li>
-                                    <li><a href="login2.html">Create</a></li>
+                                    <li><a href="/UserAdmin/Services/List">List</a></li>
+                                    <li><a href="/UserAdmin/Services/Create">Create</a></li>
                                 </ul>
                             </li>
 
