main: Achievements Complate
AchievementsController List + Update + Create + Delete Complate

--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Shared/_UserAdminLayout.cshtml
@@ -74,8 +74,8 @@
                             <li>
                                 <a href="javascript:void(0)" aria-expanded="true"><i class="bi bi-award"></i> <span>Achievements</span></a>
                                 <ul class="collapse">
-                                    <li><a href="login.html">List</a></li>
-                                    <li><a href="login2.html">Create</a></li>
+                                    <li><a href="/UserAdmin/Achievements/List">List</a></li>
+                                    <li><a href="/UserAdmin/Achievements/Create">Create</a></li>
                                 </ul>
                             </li>
                             <li>
